# borink-core

./: .gitignore  Cargo.toml  README.md
borink-auth/: Cargo.toml  README.md
borink-auth/src/: compactset.rs  ephemeral.rs  lib.rs  login.rs  main.rs  session.rs
borink-crypto/: Cargo.toml
borink-crypto/src/: lib.rs
borink-error/: Cargo.toml
borink-error/src/: lib.rs
borink-git/: Cargo.toml
borink-git-derive/: Cargo.toml
borink-git-derive-cli/: Cargo.toml
borink-git-derive-cli/src/: main.rs
borink-git-derive/src/: cli.rs  client.rs  derive.rs  derivers.rs  lib.rs  main.rs  server.rs
borink-git-serve/: Cargo.toml
borink-git-serve-cli/: Cargo.toml
borink-git-serve-cli/src/: main.rs
borink-git-serve/src/: cli.rs  client.rs  derive.rs  derivers.rs  kv.rs  lib.rs  main.rs  server.rs
borink-git/src/: git.rs  git_call.rs  git_ref.rs  lib.rs  main.rs  rdb.rs
borink-kv/: Cargo.toml
borink-kv/src/: lib.rs
borink-process/: Cargo.toml
borink-process/src/: lib.rs
