[package]
name = "borink-git-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
camino = "1"
tracing = "0.1"
borink-error = { path = "../borink-error" }
borink-process = { path = "../borink-process" }
borink-git = { path = "../borink-git" }
borink-kv = { path = "../borink-kv", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rmp-serde = { version = "1.3", optional = true }
tiny_http = { version = "0.12", optional = true }
color-eyre = { version = "=0.6.3", optional = true }
clap = { version = "4.5", optional = true, features = ["derive", "env"] }

[features]
default = ["typst-compile", "kv", "server"]
typst-compile = []
kv = ["dep:borink-kv", "dep:serde", "dep:rmp-serde", "borink-git/kv"]
server = ["dep:tiny_http", "dep:color-eyre"]
cli = ["dep:clap", "server", "kv"]